--- a/yunify-glyph/style.css
+++ b/yunify-glyph/style.css
@@ -553,7 +553,7 @@ footer {
         display: grid;
         gap: 17px;
         grid-template-columns: repeat(6, 1fr);
-        grid-template-rows: repeat(112, 80px);
+        grid-template-rows: repeat(111, 80px);
         padding: 70px;
         background-color: #f5f5f5;
     }
@@ -734,7 +734,7 @@ footer {
     
     .icon-set-container {
         grid-column: 1 / 7;
-        grid-row: 15 / 46;
+        grid-row: 15 / 45;
         background-color: #ffffff;
         padding: 90px 85px;
     }
@@ -768,7 +768,7 @@ footer {
     }
     
     .category-container {
-        margin-top: 72px;
+        margin-top: 65px;
         width: 100%;
         display: grid;
         justify-items: center;
@@ -778,26 +778,26 @@ footer {
     }
     
     .icon-category:not(:first-child) {
-        margin-top: 128px;
+        margin-top: 114px;
     }
     
     .s-3 {
         grid-column: 1 / 7;
-        grid-row: 46 / 47;
+        grid-row: 45 / 46;
         position: relative;
         top: 15px;
     }
     
     .st-2 {
         grid-column: 1 / 7;
-        grid-row: 47 / 48;
+        grid-row: 46 / 47;
         position: relative;
         top: 15px;
     }
     
     .process-title-1 {
         grid-column: 2 / 6;
-        grid-row: 48 / 49;
+        grid-row: 47 / 48;
         position: relative;
         top: 15px;
     }
@@ -818,13 +818,13 @@ footer {
     
     .fp-1 {
         grid-column: 2 / 6;
-        grid-row: 49 / 51;
+        grid-row: 48 / 50;
         margin-top: 0px;
     }
     
     .typical-icon-library {
         grid-column: 2 / 6;
-        grid-row: 51 / 57;
+        grid-row: 50 / 56;
         width: 100%;
         align-self: center;
         position: relative;
@@ -833,7 +833,7 @@ footer {
     
     .initial-goals {
         grid-column: 2 / 6;
-        grid-row: 57 / 58;
+        grid-row: 56 / 57;
         width: 100%;
         position: relative;
         top: 0px;
@@ -841,10 +841,16 @@ footer {
     
     .goal-list {
         grid-column: 2 / 6;
-        grid-row: 58 / 60;
+        grid-row: 57 / 59;
         margin: 0px;
         position: relative;
         top: 40px;
+    }
+
+    .paragraph-title {
+        font-size: 18px;
+        line-height: 27px;
+        letter-spacing: -0.1px;
     }
 
     .pt-1 {
@@ -861,21 +867,21 @@ footer {
     
     .process-title-2 {
         grid-column: 2 / 6;
-        grid-row: 62 / 63;
+        grid-row: 61 / 62;
         position: relative;
         top: -20px;
     }
     
     .fp-3 {
         grid-column: 2 / 6;
-        grid-row: 63 / 64;
+        grid-row: 62 / 63;
         position: relative;
         top: -30px;
     }
     
     .image-container {
         grid-column: 2 / 6;
-        grid-row: 65 / 69;
+        grid-row: 64 / 68;
         background-color: #ffffff;
         display: flex;
         gap: 20px;
@@ -892,19 +898,19 @@ footer {
     
     .process-title-3 {
         grid-column: 2 / 6;
-        grid-row: 70 / 71;
+        grid-row: 69 / 70;
     }
     
     .fp-4 {
         grid-column: 2 / 6;
-        grid-row: 71 / 73;
+        grid-row: 70 / 72;
         position: relative;
         top: -10px;
     }
     
     .grey-icon {
         grid-column: 1 / 3;
-        grid-row: 73 / 77;
+        grid-row: 72 / 76;
         width: 100%;
         height: 380px;
         object-fit: contain;
@@ -912,7 +918,7 @@ footer {
     
     .green-icon {
         grid-column: 3 / 5;
-        grid-row: 73 / 77;
+        grid-row: 72 / 76;
         width: 100%;
         height: 380px;
         object-fit: contain;
@@ -920,7 +926,7 @@ footer {
     
     .white-icon {
         grid-column: 5 / 7;
-        grid-row: 73 / 77;
+        grid-row: 72 / 76;
         width: 100%;
         height: 380px;
         object-fit: contain;
@@ -928,12 +934,12 @@ footer {
     
     .process-title-4 {
         grid-column: 2 / 6;
-        grid-row: 78 / 79;
+        grid-row: 77 / 78;
     }
     
     .fp-5 {
         grid-column: 2 / 6;
-        grid-row: 79 / 82;
+        grid-row: 78 / 81;
     }
     
     .fp-6 {
@@ -942,24 +948,24 @@ footer {
     
     .sizes-image {
         grid-column: 2 / 6;
-        grid-row: 83 / 85;
+        grid-row: 82 / 84;
         align-self: end;
         width: 100%;
     }
     
     .fp-7 {
         grid-column: 2 / 6;
-        grid-row: 85 / 86;
+        grid-row: 84 / 85;
     }
     
     .process-title-5 {
         grid-column: 2 / 6;
-        grid-row: 87 / 88;
+        grid-row: 86 / 87;
     }
     
     .fp-8 {
         grid-column: 2 / 6;
-        grid-row: 88 / 90;
+        grid-row: 87 / 89;
         width: 100%;
         position: relative;
         top: -15px;
@@ -967,7 +973,7 @@ footer {
     
     .shapes-image {
         grid-column: 2 / 6;
-        grid-row: 90 / 93;
+        grid-row: 89 / 92;
         width: 100%;
         align-self: center;
         position: relative;
@@ -976,17 +982,17 @@ footer {
     
     .s-4 {
         grid-column: 1 / 7;
-        grid-row: 93 / 94;
+        grid-row: 92 / 93;
     }
     
     .st-3 {
         grid-column: 1 / 2;
-        grid-row: 94 / 95;
+        grid-row: 93 / 94;
     }
     
     .video-container {
         grid-column: 1 / 7;
-        grid-row: 95 / 102;
+        grid-row: 94 / 101;
     }
     
     .position-box {
@@ -1012,54 +1018,54 @@ footer {
     
     .s-5 {
         grid-column: 1 / 7;
-        grid-row: 102 / 103;
+        grid-row: 101 / 102;
     }
     
     .st-4 {
         grid-column: 1 / 2;
-        grid-row: 103 / 104;
+        grid-row: 102 / 103;
     }
     
     .fp-9 {
         grid-column: 2 / 6;
-        grid-row: 104 / 105;
+        grid-row: 103 / 104;
         position: relative;
         top: 0px;
     }
     
     .owc-1 {
         grid-column: 1 / 3;
-        grid-row: 106 / 109;
+        grid-row: 105 / 108;
         background-image: url(/yunify-glyph/image/other-works-1.png);
     }
     
     .owc-2 {
         grid-column: 3 / 5;
-        grid-row: 106 / 109;
+        grid-row: 105 / 108;
         background-image: url(/yunify-glyph/image/other-works-2.png);
     }
     
     .owc-3 {
         grid-column: 5 / 7;
-        grid-row: 106 / 109;
+        grid-row: 105 / 108;
         background-image: url(/yunify-glyph/image/other-works-3.png);
     }
     
     .owc-4 {
         grid-column: 1 / 3;
-        grid-row: 109 / 112;
+        grid-row: 108 / 111;
         background-image: url(/yunify-glyph/image/other-works-4.png);
     }
     
     .owc-5 {
         grid-column: 3 / 5;
-        grid-row: 109 / 112;
+        grid-row: 108 / 111;
         background-image: url(/yunify-glyph/image/other-works-5.png);
     }
     
     .owc-6 {
         grid-column: 5 / 7;
-        grid-row: 109 / 112;
+        grid-row: 108 / 111;
         background-image: url(/yunify-glyph/image/other-works-6.png);
     }
     
@@ -1072,7 +1078,7 @@ footer {
     
     footer {
         grid-column: 1 / 7;
-        grid-row: 112 / 113;
+        grid-row: 111 / 112;
         font-size: 11px;
         line-height: 15px;
         letter-spacing: 0.1px;
@@ -1088,8 +1094,573 @@ footer {
         display: grid;
         gap: 15px;
         grid-template-columns: repeat(6, 1fr);
-        grid-template-rows: repeat(150, 80px);
+        grid-template-rows: repeat(106, 80px);
         padding: 60px;
+        background-color: #f5f5f5;
+    }
+
+    header {
+        background-image: url(/yunify-glyph/image/yunify-glyph.png);
+        background-color: #ffffff;
+        background-size: contain;
+        background-repeat: no-repeat;
+        background-position: center;
+        max-width: 1280px;
+        width: 100%;
+        height: 425px;
+        position: absolute;
+    }
+    
+    .back {
+        background-color: rgba(50, 69, 88, 0.7);
+        border-radius: 16px;
+        position: relative;
+        z-index: 3;
+        top: 6px;
+        left: 4px;
+        display: flex;
+        align-items: center;
+        text-decoration: none;
+        width: 65px;
+        height: 28px;
+    }
+    
+    .back:hover {
+        background-color: #166ced;
+    }
+    
+    .back-icon {
+        position: relative;
+        left: 7px;
+        width: 14px;
+    }
+    
+    .back-link {
+        display: inline;
+    }
+    
+    .back-text {
+        color: #ffffff;
+        font-size: 12px;
+        line-height: 12px;
+        font-weight: 600;
+        position: relative;
+        left: 10px;
+        top: 0px;
+    }
+    
+    h1 {
+        grid-column: 1 / 7;
+        grid-row: 5 / 7;
+        align-self: center;
+        font-size: 28px;
+        line-height: 38px;
+        font-weight: normal;
+        letter-spacing: -0.8px;
+        margin: 0px;
+        position: relative;
+        top: -5px;
+    }
+    
+    .bold-title {
+        letter-spacing: -0.6px;
+    }
+    
+    .seperator {
+        border-bottom: 1px solid #c6c6c6;
+    }
+    
+    .s-1 {
+        grid-column: 1 / 7;
+        grid-row: 6 / 7;
+        position: relative;
+        top: 0px;
+    }
+    
+    .work-info {
+        list-style-type: none;
+        padding: 0px;
+        margin: 0px;
+        font-size: 17px;
+        line-height: 26px;
+        letter-spacing: -0.1px;
+    }
+    
+    .info-name {
+        grid-column: 1 / 3;
+        grid-row: 7 / 9;
+        color: #acacac;
+        position: relative;
+        top: 0px;
+    }
+    
+    .info-content {
+        grid-column: 3 / 7;
+        grid-row: 7 / 9;
+        color: #000000;
+        position: relative;
+        top: 0px;
+    }
+    
+    .info-name-item:not(:last-child), .info-content-item:not(:last-child) {
+        margin-bottom: 10px;
+    }
+    
+    .work-description {
+        grid-column: 3 / 7;
+        grid-row: 9 / 14;
+        position: relative;
+        top: 0px;
+    }
+    
+    .work-description-paragraph:not(:last-child) {
+        margin-bottom: 10px;
+    } 
+    
+    p {
+        margin: 0px;
+    }
+    
+    .body-text {
+        font-size: 17px;
+        line-height: 26px;
+        letter-spacing: -0.1px;
+    }
+    
+    .quick-link {
+        grid-column: 1 / 4;
+        grid-row: 13 / 14;
+        list-style-type: none;
+        margin: 0px;
+        padding: 0px;
+        line-height: 13px;
+        align-self: end;
+        position: relative;
+        top: -40px;
+    }
+    
+    .link {
+        font-size: 13px;
+        line-height: 13px;
+        color: #166ced;
+        text-decoration: none;
+    }
+    
+    .link:hover {
+        text-decoration: underline;
+    }
+    
+    .quick-link-item:not(:last-child) {
+        margin-bottom: 14px;
+    }
+    
+    .s-2 {
+        grid-column: 1 / 7;
+        grid-row: 14 / 15;
+    }
+    
+    .section-title {
+        font-size: 18px;
+        line-height: 27px;
+        letter-spacing: -0.1px;
+        color: #acacac;
+        font-weight: normal;
+        margin: 0px;
+    }
+    
+    .st-1 {
+        grid-column: 1 / 3;
+        grid-row: 15 / 16;
+    }
+    
+    .icon-set-container {
+        grid-column: 1 / 7;
+        grid-row: 16 / 41;
+        background-color: #ffffff;
+        padding: 70px 65px;
+    }
+    
+    .category-name {
+        font-size: 24px;
+        line-height: 24px;
+        letter-spacing: -0.2px;
+        font-family: "Roboto";
+        font-weight: bold;
+        margin: 0px;
+    }
+
+    .icon-image {
+        width: 40px;
+    }
+    
+    .icon-name {
+        font-size: 11px;
+        line-height: 11px;
+        letter-spacing: 0.1px;
+        font-family: "Roboto";
+        font-weight: normal;
+        color: #697886;
+        margin-top: 10px;
+        white-space: nowrap;
+    }
+    
+    .icon-container {
+        grid-column: span 1;
+        display: flex;
+        flex-direction: column;
+        max-width: 75px;
+        align-items: center;
+        min-height: 78px;
+    }
+    
+    .category-container {
+        margin-top: 47px;
+        width: 100%;
+        display: grid;
+        justify-items: center;
+        row-gap: 37px;
+        column-gap: 42px;
+        grid-template-columns: repeat(7, minmax(40px, 1fr));
+    }
+    
+    .icon-category:not(:first-child) {
+        margin-top: 92px;
+    }
+    
+    .s-3 {
+        grid-column: 1 / 7;
+        grid-row: 41 / 42;
+        position: relative;
+        top: 15px;
+    }
+    
+    .st-2 {
+        grid-column: 1 / 7;
+        grid-row: 42 / 43;
+        position: relative;
+        top: 15px;
+    }
+    
+    .process-title-1 {
+        grid-column: 1 / 7;
+        grid-row: 43 / 44;
+        position: relative;
+        top: 20px;
+    }
+    
+    .subtitle {
+        font-size: 20px;
+        line-height: 20px;
+        letter-spacing: -0.2px;
+        margin: 0px;
+    }
+    
+    .process-title-text {
+        font-size: 30px;
+        line-height: 36px;
+        letter-spacing: -0.3px;
+        margin-top: 6px;
+    }
+    
+    .fp-1 {
+        grid-column: 1 / 7;
+        grid-row: 44 / 46;
+        margin-top: 0px;
+    }
+    
+    .typical-icon-library {
+        grid-column: 1 / 7;
+        grid-row: 46 / 52;
+        width: 100%;
+        align-self: center;
+        position: relative;
+        top: 0px;
+    }
+    
+    .initial-goals {
+        grid-column: 1 / 7;
+        grid-row: 52 / 53;
+        width: 100%;
+        position: relative;
+        top: 0px;
+    }
+    
+    .goal-list {
+        grid-column: 1 / 7;
+        grid-row: 53 / 54;
+        margin: 0px;
+        position: relative;
+        top: 5px;
+        left: -10px;
+    }
+
+    .paragraph-title {
+        font-size: 17px;
+        line-height: 25px;
+        letter-spacing: -0.1px;
+    }
+
+    .pt-1 {
+        margin: 0px;
+    }
+    
+    .goal-list-item:not(:last-child) {
+        margin-bottom: 9px;
+    }
+    
+    .fp-2 {
+        margin-top: 6px;
+    }
+    
+    .process-title-2 {
+        grid-column: 1 / 7;
+        grid-row: 56 / 57;
+        position: relative;
+        top: 20px;
+    }
+    
+    .fp-3 {
+        grid-column: 1 / 7;
+        grid-row: 57 / 58;
+        position: relative;
+        top: 0px;
+    }
+    
+    .image-container {
+        grid-column: 1 / 7;
+        grid-row: 59 / 64;
+        background-color: #ffffff;
+        display: flex;
+        gap: 15px;
+        justify-content: center;
+        align-items: center;
+        padding: 94px 45px;
+        position: relative;
+        top: -30px;
+    }
+    
+    .template-image {
+        min-width: 0;
+    }
+    
+    .process-title-3 {
+        grid-column: 1 / 7;
+        grid-row: 65 / 66;
+    }
+    
+    .fp-4 {
+        grid-column: 1 / 7;
+        grid-row: 66 / 67;
+        position: relative;
+        top: -20px;
+    }
+    
+    .grey-icon {
+        grid-column: 1 / 3;
+        grid-row: 67 / 69;
+        width: 100%;
+        height: 380px;
+        object-fit: contain;
+        position: relative;
+        top: -20px;
+    }
+    
+    .green-icon {
+        grid-column: 3 / 5;
+        grid-row: 67 / 69;
+        width: 100%;
+        height: 380px;
+        object-fit: contain;
+        position: relative;
+        top: -20px;
+    }
+    
+    .white-icon {
+        grid-column: 5 / 7;
+        grid-row: 67 / 69;
+        width: 100%;
+        height: 380px;
+        object-fit: contain;
+        position: relative;
+        top: -20px;
+    }
+    
+    .process-title-4 {
+        grid-column: 1 / 7;
+        grid-row: 71 / 72;
+        position: relative;
+        top: 15px;
+    }
+    
+    .fp-5 {
+        grid-column: 1 / 7;
+        grid-row: 72 / 75;
+    }
+    
+    .fp-6 {
+        margin-top: 10px;
+    }
+    
+    .sizes-image {
+        grid-column: 1 / 7;
+        grid-row: 75 / 78;
+        align-self: center;
+        width: 100%;
+        position: relative;
+        top: -10px;
+    }
+    
+    .fp-7 {
+        grid-column: 1 / 7;
+        grid-row: 78 / 79;
+        position: relative;
+        top: 0px;
+    }
+    
+    .process-title-5 {
+        grid-column: 1 / 7;
+        grid-row: 80 / 81;
+    }
+    
+    .fp-8 {
+        grid-column: 1 / 7;
+        grid-row: 81 / 83;
+        width: 100%;
+        position: relative;
+        top: -20px;
+    }
+    
+    .shapes-image {
+        grid-column: 1 / 7;
+        grid-row: 83 / 85;
+        width: 100%;
+        align-self: center;
+        position: relative;
+        top: -20px;
+    }
+    
+    .s-4 {
+        grid-column: 1 / 7;
+        grid-row: 86 / 87;
+        position: relative;
+        top: -40px;
+    }
+    
+    .st-3 {
+        grid-column: 1 / 2;
+        grid-row: 87 / 88;
+        position: relative;
+        top: -40px;
+    }
+    
+    .video-container {
+        grid-column: 1 / 7;
+        grid-row: 87 / 92;
+        position: relative;
+        top: 40px;
+    }
+    
+    .position-box {
+        position: relative;
+        width: 100%;
+        padding-bottom: 100%;
+    }
+    
+    .position-container {
+        position: absolute;
+        width: 100%;
+        height: 69.64%;
+        border: 1px solid #ffffff;
+        box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.04), 0px 5px 17px rgba(0, 0, 0, 0.06);
+        overflow: hidden;
+        border-radius: 4px;
+        -webkit-transform: translateZ(0);
+    }
+    
+    .appcenter-video {
+        width: 100%;
+    }
+    
+    .s-5 {
+        grid-column: 1 / 7;
+        grid-row: 93 / 94;
+    }
+    
+    .st-4 {
+        grid-column: 1 / 3;
+        grid-row: 94 / 95;
+    }
+    
+    .fp-9 {
+        grid-column: 1 / 7;
+        grid-row: 95 / 96;
+        position: relative;
+        top: 30px;
+    }
+    
+    .owc-1 {
+        grid-column: 1 / 4;
+        grid-row: 97 / 100;
+        background-image: url(/yunify-glyph/image/other-works-1.png);
+    }
+    
+    .owc-2 {
+        grid-column: 4 / 7;
+        grid-row: 97 / 100;
+        background-image: url(/yunify-glyph/image/other-works-2.png);
+    }
+    
+    .owc-3 {
+        grid-column: 1 / 4;
+        grid-row: 100 / 103;
+        background-image: url(/yunify-glyph/image/other-works-3.png);
+    }
+    
+    .owc-4 {
+        grid-column: 4 / 7;
+        grid-row: 100 / 103;
+        background-image: url(/yunify-glyph/image/other-works-4.png);
+    }
+    
+    .owc-5 {
+        grid-column: 1 / 4;
+        grid-row: 103 / 106;
+        background-image: url(/yunify-glyph/image/other-works-5.png);
+    }
+    
+    .owc-6 {
+        grid-column: 4 / 7;
+        grid-row: 103 / 106;
+        background-image: url(/yunify-glyph/image/other-works-6.png);
+    }
+    
+    .other-works-container {
+        background-size: contain;
+        background-color: #000000;
+        background-position: center;
+        background-repeat: no-repeat;
+    }
+    
+    footer {
+        grid-column: 1 / 7;
+        grid-row: 106 / 107;
+        font-size: 11px;
+        line-height: 15px;
+        letter-spacing: 0.1px;
+        color: #8d8d8d;
+        border-top: 1px solid #c6c6c6;
+        padding-top: 16px;
+        align-self: end;
+    }
+}
+
+@media (max-width: 768px) {
+    main {
+        display: grid;
+        gap: 12px;
+        grid-template-columns: repeat(6, 1fr);
+        grid-template-rows: repeat(150, 80px);
+        padding: 45px;
         background-color: #f5f5f5;
     }
 }
