--- a/xxpie/style.css
+++ b/xxpie/style.css
@@ -1220,3 +1220,318 @@ footer {
         align-self: end;
     }
 }
+
+@media (max-width: 395px) {
+    main {
+        display: grid; 
+        gap: 10px;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(76, 68px);
+        max-width: 1120px;
+        padding: 30px;
+        background-color: #f5f5f5;
+    }
+
+    header {
+        background-image: url(/xxpie/image/xxpie.png);
+        background-size: 626.09px 225px;
+        background-color: #000000;
+        background-repeat: no-repeat;
+        background-position: center;
+        max-width: 1280px;
+        width: 100%;
+        height: 254px;
+        position: absolute;
+    }
+    
+    .back {
+        background-color: rgba(255, 255, 255, 0.17);
+        border-radius: 16px;
+        position: relative;
+        z-index: 3;
+        top: 6px;
+        left: 4px;
+        display: flex;
+        align-items: center;
+        text-decoration: none;
+        width: 65px;
+        height: 28px;
+    }
+    
+    .back-icon {
+        position: relative;
+        left: 7px;
+        width: 14px;
+    }
+    
+    .back-link {
+        display: inline;
+    }
+    
+    .back-text {
+        color: #ffffff;
+        font-size: 12px;
+        line-height: 12px;
+        font-weight: 600;
+        position: relative;
+        left: 10px;
+        top: 0px;
+    }
+    
+    h1 {
+        grid-column: 1 / 3;
+        grid-row: 4 / 6;
+        align-self: center;
+        font-size: 22px;
+        line-height: 29px;
+        font-weight: normal;
+        letter-spacing: -0.4px;
+        margin: 0px;
+        position: relative;
+        top: -5px;
+    }
+    
+    .bold-title {
+        letter-spacing: -0.2px;
+    }
+    
+    .seperator {
+        border-bottom: 1px solid #c6c6c6;
+    }
+    
+    .s-1 {
+        grid-column: 1 / 3;
+        grid-row: 5 / 6;
+        position: relative;
+        top: 0px;
+    }
+    
+    .work-info {
+        list-style-type: none;
+        padding: 0px;
+        margin: 0px;
+        font-size: 15px;
+        line-height: 23px;
+        letter-spacing: -0.1px;
+    }
+    
+    .info-name {
+        grid-column: 1 / 2;
+        grid-row: 6 / 7;
+        color: #acacac;
+        position: relative;
+        top: 0px;
+    }
+    
+    .info-content {
+        grid-column: 2 / 3;
+        grid-row: 6 / 7;
+        color: #000000;
+        position: relative;
+        top: 0px;
+    }
+    
+    .info-name-item:not(:last-child), .info-content-item:not(:last-child) {
+        margin-bottom: 4px;
+    }
+    
+    .work-description {
+        grid-column: 1 / 3;
+        grid-row: 7 / 11;
+        position: relative;
+        top: 30px;
+    }
+    
+    .work-description-paragraph:not(:last-child) {
+        margin-bottom: 7px;
+    } 
+    
+    p {
+        margin: 0px;
+    }
+    
+    .body-text {
+        font-size: 15px;
+        line-height: 23px;
+        letter-spacing: -0.1px;
+    }
+    
+    .link {
+        font-size: 14px;
+        line-height: 14px;
+        color: #166ced;
+        text-decoration: none;
+    }
+    
+    .link:hover {
+        text-decoration: underline;
+    }
+    
+    .quick-link-item:not(:last-child) {
+        margin-bottom: 16px;
+    }
+    
+    .s-2 {
+        grid-column: 1 / 3;
+        grid-row: 13 / 14;
+        position: relative;
+        top: 40px;
+    }
+    
+    .section-title {
+        font-size: 15px;
+        line-height: 23px;
+        letter-spacing: -0.1px;
+        color: #acacac;
+        font-weight: normal;
+        margin: 0px;
+    }
+    
+    .st-1 {
+        grid-column: 1 / 2;
+        grid-row: 14 / 15;
+        position: relative;
+        top: 40px;
+    }
+    
+    .album {
+        grid-column: 1 / 3;
+        grid-row: 15 / 18 ;
+        justify-self: center;
+        width: 100%;
+        max-width: 490px;
+        border-radius: 2px;
+        border: 1px solid #ffffff;
+        box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.06), 0px 3px 11px rgba(0, 0, 0, 0.04);
+        position: relative;
+        top: 30px;
+    }
+    
+    .album_mobile {
+        grid-column: 1 / 2;
+        grid-row: 19 / 23;
+        align-items: center;
+        justify-self: center;
+        width: 100%;
+        max-width: 160px;
+        position: relative;
+    }
+    
+    .upload_mobile {
+        grid-column: 2 / 3;
+        grid-row: 19 / 23;
+        align-items: center;
+        justify-self: center;
+        width: 100%;
+        max-width: 160px;
+        position: relative;
+    }
+    
+    .icon-container {
+        grid-column: 1 / 3;
+        grid-row: 23 / 51;
+        background-color: #ffffff;
+        padding: 36px 28px;
+        position: relative;
+        top: 10px;
+    }
+    
+    .grid-container {
+        display: grid;
+        row-gap: 32px;
+        column-gap: 20px;
+        grid-template-columns: repeat(5, minmax(40px, 1fr));
+        width: 100%;
+        justify-items: center;
+    }
+
+    .icon-image {
+        width: 32px;
+    }
+    
+    .s-3 {
+        grid-column: 1 / 3;
+        grid-row: 51 / 52;
+    }
+    
+    .st-2 {
+        grid-column: 1 / 2;
+        grid-row: 52 / 53;
+    }
+    
+    .process-title-1 {
+        grid-column: 1 / 3;
+        grid-row: 53 / 54;
+        position: relative;
+        top: 0px;
+    }
+    
+    .subtitle {
+        font-size: 15px;
+        line-height: 15px;
+        letter-spacing: -0.1px;
+        margin: 0px;
+    }
+    
+    .process-title-text {
+        font-size: 19px;
+        line-height: 25px;
+        letter-spacing: -0.6px;
+        margin-top: 4px;
+    }
+    
+    .fp-1 {
+        grid-column: 1 / 3;
+        grid-row: 54 / 56;
+        margin-top: 0px;
+        position: relative;
+        top: -25px;
+    }
+    
+    .design-system {
+        grid-column: 1 / 3;
+        grid-row: 56 / 66;
+        background-image: url(/xxpie/image/design-system-small.png);
+        background-size: contain;
+        background-position: left;
+        background-repeat: no-repeat;
+    }
+    
+    .process-title-2 {
+        grid-column: 1 / 3;
+        grid-row: 67 / 68;
+        align-self: end;
+        position: relative;
+        top: 25px;
+    }
+    
+    .fp-2 {
+        grid-column: 1 / 3;
+        grid-row: 68 / 69;
+        margin-top: 0px;
+    }
+    
+    .details {
+        grid-column: 1 / 3;
+        grid-row: 70 / 76;
+        max-width: 490px;
+        background-image: url(/xxpie/image/details.png);
+        background-size: contain;
+        background-position: top;
+        background-repeat: no-repeat;
+        position: relative;
+        top: 0px;
+    }
+    
+    footer {
+        grid-column: 1 / 3;
+        grid-row: 76 / 77;
+        font-size: 11px;
+        line-height: 15px;
+        letter-spacing: 0.1px;
+        color: #8d8d8d;
+        border-top: 1px solid #c6c6c6;
+        padding-top: 16px;
+        align-self: end;
+    }
+}
