--- a/product-tour-and-smartx-community/style.css
+++ b/product-tour-and-smartx-community/style.css
@@ -2913,6 +2913,7 @@ footer {
         align-self: center;
         position: relative;
         top: 0px;
+        z-index: 2;
     }
     
     .link {
